# py-blockparser

./: README.md  pyproject.toml
src/: args_man.py  main.py
